--- a/colorgame.css
+++ b/colorgame.css
@@ -25,7 +25,15 @@ h1
     color: white;
 }
 
-span
+/* span
 {
     color: white;
+} */
+
+#stripe
+{
+    background: white;
+    height: 30px;
+    text-align: center;
+    color: black;
 }
